smacss structure cleaned and improved

--- a/scss/modules/_all.scss
+++ b/scss/modules/_all.scss
@@ -1,10 +1,7 @@
-/* ===========================
-   Modules/All
-   =========================== */
+/* Modules/All */
 
-// @import "buttons";
 @import "fonts";
 @import "icons";
-// @import "functions";
 @import "mixins";
+// @import "functions";
 // @import "sprites";
