--- a/scss/partials/base/_base.scss
+++ b/scss/partials/base/_base.scss
@@ -1,6 +1,5 @@
-/* ===========================
-   Partials/Base/Base
-   =========================== */
+/* Partials/Base/Base */
+
 a {
     color: $link-color;
     text-decoration: none;
