--- a/scss/variables/_fonts.scss
+++ b/scss/variables/_fonts.scss
@@ -1,6 +1,4 @@
-/* ===========================
-   fonts.scss
-   =========================== */
+/* Variables/Fonts */
 
 $font-family-sans-serif-arial: Arial, Helvetica, sans-serif;
 $font-family-sans-serif-helvetica: Helvetica, sans-serif;
@@ -9,6 +7,13 @@ $font-family-serif-georgia: Georgia, serif;
 $font-family-serif-times: "Times New Roman", Times, serif;
 $font-family-monospace-courier: "Courier New", Courier, monospace;
 
+$font-family-base: $font-family-sans-serif-arial;
+
+
 //////////////////////////////
 ////  VARIABLES TO FONTS  ////
 //////////////////////////////
+
+// $font-body: $font-family-base;
+// $font-h1: $font-family-sans-serif-arial;
+// $font-h2: $font-family-sans-serif-arial;
