--- a/scss/variables/_site-settings.scss
+++ b/scss/variables/_site-settings.scss
@@ -1,34 +1,17 @@
-/* ===========================
-   Variables/Site-settings
-   =========================== */
+/* Variables/Site-settings */
 
 @charset "UTF-8";
 
-// $fa-font-path: "../../fonts/font-awesome" !default;
 
-/* Layout
-   =========================== */
+/* ==========  Layout  ========== */
 
-// $margin-footer: 40px 0 1px;
+// $margin-footer:  40px 0 1px;
 // $padding-footer: 10px 0;
 
-/* Fonts
-   =========================== */
+// $screen-xs-max: 320px !default; //  iphone 4, iphone 5
 
-$font-family-base: $font-family-bbva-light;
-$font-body: $font-family-base;
-$font-h1: $font-family-bbva-light;
-$font-h2: $font-family-bbva-light;
 
-// $font-h3: $font-family-sans-serif-verdana;
-// $font-h4: $font-family-sans-serif-verdana;
-// $font-h5: $font-family-sans-serif-verdana;
-// $font-h6: $font-family-sans-serif-verdana;
-
- $screen-xs-max: 320px !default; //  iphone 4, iphone 5
-
- // Grids
- // -------------------------------
+ /* ==========  Grid  ========== */
 
  // $grid-padding-width:              10px !default;
  // $grid-responsive-xs-break:        320px !default;  // smaller than iphone 4, iphone 5
