--- a/scss/partials/_helpers.scss
+++ b/scss/partials/_helpers.scss
@@ -10,6 +10,10 @@
     margin-bottom: 0 !important;
 }
 
+.mgt-40 {
+    margin-top: 40px !important;
+}
+
 .mgr-5 {
     margin-right: 5px !important;
 }
